uso de paleta de colores, subida de documentos, declaraciones juradas

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.itextpdf-5.5.4.jar=lib\\itextpdf-5.5.4.jar
 file.reference.jbcrypt-0.4.jar=lib\\jbcrypt-0.4.jar
 file.reference.mysql-connector-j-8.0.31.jar=lib\\mysql-connector-j-8.0.31.jar
 includes=**
@@ -40,7 +41,8 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.jbcrypt-0.4.jar}:\
-    ${file.reference.mysql-connector-j-8.0.31.jar}
+    ${file.reference.mysql-connector-j-8.0.31.jar}:\
+    ${file.reference.itextpdf-5.5.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
